@@ -5,7 +5,7 @@ val debug_image_processing : bool ref
 
 (** Extract images. *)
 val extract_images :
-  ?raw:bool -> ?path_to_p2p:string -> ?path_to_im:string ->
+  inline:bool -> ?raw:bool -> ?path_to_p2p:string -> ?path_to_im:string ->
   Cpdfmetadata.encoding -> bool -> bool -> Pdf.t -> int list -> string -> unit
 
 (** Report image resolutions. *)        
